--- a/Coursera_Natural_Language_Processing/homework/2/CMP462 HW02 Data/hw2.ipynb
+++ b/Coursera_Natural_Language_Processing/homework/2/CMP462 HW02 Data/hw2.ipynb
@@ -1333,6 +1333,192 @@
     "    else:\n",
     "        d[f[i]] = 1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d = LinearRegression()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/user/Documents/online_courses/Coursera_Natural_Language_Processing/homework/2/CMP462 HW02 Data/python\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /Users/user/Documents/online_courses/Coursera_Natural_Language_Processing/homework/2/CMP462 HW02 Data/python/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 248\r\n",
+      "-rwxr-xr-x  1 user  staff  2156 Sep  3 22:53 \u001b[31mCustomLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  3986 Sep  3 22:53 CustomLanguageModel.pyc\r\n",
+      "-rwxr-xr-x@ 1 user  staff   966 Mar 18  2012 \u001b[31mDatum.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  2459 Aug 27 21:47 Datum.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  4964 Aug 27 17:54 \u001b[31mEditModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  5668 Aug 27 21:47 EditModel.pyc\r\n",
+      "-rwxr-xr-x@ 1 user  staff  2937 Mar 18  2012 \u001b[31mHolbrookCorpus.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  4038 Aug 27 21:47 HolbrookCorpus.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  1759 Sep  3 20:46 \u001b[31mLaplaceBigramLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  3493 Sep  3 21:20 LaplaceBigramLanguageModel.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  1212 Sep  3 20:41 \u001b[31mLaplaceUnigramLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  2417 Sep  3 20:45 LaplaceUnigramLanguageModel.pyc\r\n",
+      "-rwxr-xr-x@ 1 user  staff  1922 Mar 18  2012 \u001b[31mSentence.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  4738 Aug 27 21:47 Sentence.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  4774 Sep  3 21:20 \u001b[31mSpellCorrect.py\u001b[m\u001b[m*\r\n",
+      "-rwxr-xr-x@ 1 user  staff   477 Mar 18  2012 \u001b[31mSpellingResult.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  1686 Aug 27 21:47 SpellingResult.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  1857 Aug 31 20:52 \u001b[31mStupidBackoffLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  3545 Aug 31 20:52 StupidBackoffLanguageModel.pyc\r\n",
+      "-rwxr-xr-x@ 1 user  staff  1112 Mar 18  2012 \u001b[31mUniformLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  1979 Aug 27 21:47 UniformLanguageModel.pyc\r\n",
+      "-rwxr-xr-x@ 1 user  staff   829 Mar 18  2012 \u001b[31mUnigramLanguageModel.py\u001b[m\u001b[m*\r\n",
+      "-rw-r--r--  1 user  staff  2098 Aug 27 21:47 UnigramLanguageModel.pyc\r\n",
+      "-rw-r--r--  1 user  staff     0 Aug 27 22:08 __init__.py\r\n",
+      "-rw-r--r--  1 user  staff   105 Aug 27 22:08 __init__.pyc\r\n",
+      "-rw-r--r--  1 user  staff  3224 Aug 31 17:41 sblm.pyc\r\n",
+      "-rwxr-xr-x  1 user  staff  7578 Aug 27 17:54 \u001b[31msubmit.py\u001b[m\u001b[m*\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import CustomLanguageModel as clm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup \n",
+    "import urllib2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "web = urllib2.urlopen('https://www.kaggle.com/c/coupon-purchase-prediction/data?coupon_list_test.csv.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(web.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'\\n'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.contents[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "No module named pygsr",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-7d1ac9b5073d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpygsr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named pygsr"
+     ]
+    }
+   ],
+   "source": [
+    "import pygsr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
