update practice notebook

--- a/Coursera_Natural_Language_Processing/practice_notebook.ipynb
+++ b/Coursera_Natural_Language_Processing/practice_notebook.ipynb
@@ -76,12 +76,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import string\n",
+    "import re\n",
+    "string.punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "string_ = []\n",
+    "with open(\"homework/4/data/imdb1/pos/cv000_29590.txt\") as file_:\n",
+    "    for i in file_:\n",
+    "        string_+=i.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "indices = []\n",
+    "for i,word in enumerate(string_):\n",
+    "    if re.search(\"^not$|n't|never\", word) or re.match(\"[\\.\\?,!]\", word):\n",
+    "        indices.append((i, word))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "indices  = [(i,word) for i,word in enumerate(string_) if re.search(\"^not$|n't|never\", word) or re.match(\"[\\.\\?,!]\", word)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "to_change = [(indices[i][0]+1, indices[i+1][0]-1) for i in range(len(indices)-1) if re.search(\"^not$|n't|never\", indices[i][1]) and re.match(\"[\\.\\?,!]\", indices[i+1][1])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in to_change:\n",
+    "    for j in range(*i):\n",
+    "        string_[j] = \"NOT_\"+string_[j]"
+   ]
   }
  ],
  "metadata": {
